--- a/public/styles/partials/forms.css
+++ b/public/styles/partials/forms.css
@@ -48,3 +48,9 @@
 .textarea-block:focus-within::after {
   bottom: 7px;
 }
+
+label small {
+  font-size:  1.2rem;
+  padding-left: 1.2rem;
+  color: var(--color-small-info);
+}
